benchmarks: modernize JVM options and harness
Drop obsolete benchmark JVM options (-XX:+AggressiveOpts, CMS flags, -server)
so JMH runs on modern JDKs; add a relativeToLhsLastLine Micro variant; fix the
scalafmt_rewrite benchmark (the SortImports shim threw NotImplementedError) to
use the Imports rule + RedundantBraces.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>